--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     width: 100%;
     height: 460vh;
     background-image: linear-gradient(#463e67, #473f68, #463e68);
-    overflow:hidden;
+overflow-x:hidden;
 }
 
 .landing{
